--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@testing-library/user-event": "^12.1.10",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
+    "react-animated-burgers": "^1.2.8",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.3",
     "swiper": "^6.8.4",
     "web-vitals": "^1.0.1"
   },
